Refactor Ensy Homey app to support Ensy Ventilation device
- Updated app name and description to reflect ventilation functionality
- Added flow cards for heating events and preset mode changes
- Enhanced driver capabilities for heating and temperature management
- Implemented manual pairing HTML for device connection
- Improved code formatting and consistency across files

This commit enhances the app's functionality and user experience for controlling Ensy ventilation devices.

--- a/locales/en.json
+++ b/locales/en.json
@@ -1,1 +1,13 @@
-{}
+{
+  "pair": {
+    "manual": {
+      "title": "Add Ensy Device",
+      "description": "Enter your Ensy device's MAC address to connect.",
+      "mac_address": "MAC Address:",
+      "mac_help": "Found on device label or in router DHCP list",
+      "insecure_tls": "Allow insecure TLS (for expired certificates)",
+      "insecure_help": "Enable if connection fails due to certificate issues",
+      "connect": "Connect Device"
+    }
+  }
+}
